--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
-* {
+/* * {
   box-sizing: border-box;
   color: #333;
-}
+} */
 
 body {
   background-color: #81a69b;
@@ -108,6 +108,10 @@ header > a,
   overflow: hidden;
   text-indent: -9999px;
   margin: 20px 0 10px 50px;
+}
+
+.tabCategorie {
+  margin-left: 45px;
 }
 
 .pet h2 {
